feat: update app name and splash image; remove unused logo images; enhance Filters component for category selection

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "restate",
+    "name": "Restate",
     "slug": "restate",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -27,7 +27,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/splash.png",
           "resizeMode": "cover",
           "backgroundColor": "#ffffff",
           "enableFullScreenImage_legacy": true
